Fix reactions drawer on mobile

--- a/platform-ui-skin/src/main/webapp/skin/less/social/skin/Activity/Style.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/social/skin/Activity/Style.less
@@ -2292,8 +2292,8 @@ blockquote:after {
 			border-top: 1px solid  @greyColorLighten1Opacity1!important;
 		}
 		.activityReactionsContainer {
-			.reactionsUsersAvatar, .seeMoreLikers, .activityLikersAndKudosDrawer {
-				display: none;
+			.reactionsUsersAvatar, .seeMoreLikers, .seeMoreReactionsContainer, .likersNumber {
+				display: none!important;
 			}
 		}
 	}
